# tools

./: README.md  TOOL_INDEX.md  pyproject.toml
course-anonymizer/: README.md  privacy-map.example.json
course-clean/: README.md
course_anonymizer/: __init__.py  __main__.py  cli.py  sanitizer.py
course_clean/: __init__.py  __main__.py  cleaner.py  cli.py
daily_tools/: __init__.py  csv_select.py  file_hash.py  json_format.py  text_stats.py
tests/: test_course_anonymizer.py  test_course_clean.py  test_csv_select.py  test_file_hash.py  test_json_format.py  test_text_stats.py  test_word_to_pdf.py
word-to-pdf/: README.md
word_to_pdf/: __init__.py  __main__.py  backends.py  cli.py  converter.py  word_backend.ps1
