[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-tools"
version = "0.1.0"
description = "Small practical Python command line tools."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "kaixin-aa" }
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8"
]

[project.scripts]
csv-select = "daily_tools.csv_select:main"
course-anonymizer = "course_anonymizer.cli:main"
course-clean = "course_clean.cli:main"
file-hash = "daily_tools.file_hash:main"
json-format = "daily_tools.json_format:main"
text-stats = "daily_tools.text_stats:main"
word-to-pdf = "word_to_pdf.cli:main"

[tool.setuptools.packages.find]
include = ["course_anonymizer*", "course_clean*", "daily_tools*", "word_to_pdf*"]

[tool.setuptools.package-data]
word_to_pdf = ["*.ps1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
